(#599) fixed modal z-index, top bar for align&fine tune

--- a/app/javascript/styles/_legacy.scss
+++ b/app/javascript/styles/_legacy.scss
@@ -2,3 +2,7 @@
 @import 'legacy/customradio';
 @import 'legacy/forms';
 @import 'legacy/stepper';
+
+.ReactModal__Overlay {
+  z-index: $zindex-modal !important; // stylelint-disable-line declaration-no-important
+}
